refactor: improves from pylint run
- Added pylint to the dev dependencies

- Ran and performed several pylint suggested changes on the whole application

- Removed deployment workflow and added the AWS ECR step to the build file

- On the build file, used the >=80% unit test coverage argument for failure if not met

- Improved documentation
